# esmakefile-cmake

./: .gitignore  .npmignore  CHANGELOG.md  README.md  install-thoughts.txt  package-lock.json  package.json  project.vim  test-plan.md  tsconfig.json
.github/workflows/: test-push.yml
dev-docs/: README.md
dev-docs/cmake-quoting/: CMakeLists.txt  README.md
dev-docs/testing/: README.md
src/: CompileCommands.ts  Compiler.ts  Config.ts  Distribution.ts  Executable.ts  GccCompiler.ts  Library.ts  MsvcCompiler.ts  Source.ts  index.ts  makeDepfile.ts  quoteCmakeArg.ts  quoteShellArg.ts
src/spec/: DistributionSpec.ts  cmake.ts  devSpec.ts  e2e.ts  plan.yaml  quoteCmakeArgSpec.ts  quoteShellArgSpec.ts  run.ts  testMain.ts  upstream.ts
src/spec/downstream/: README.md
src/spec/downstream/d1/: CMakeLists.txt  make.ts
src/spec/downstream/d1/src/: d1.c
src/spec/pkg/: README.md
src/spec/pkg/a/: LICENSE.txt  make.ts
src/spec/pkg/a/include/a/: a.h
src/spec/pkg/a/include/mkuuid/: mkuuid.h
src/spec/pkg/a/private/include/: secret.h
src/spec/pkg/a/src/: a.c  e1.c  mkuuid.c
src/spec/upstream/: CMakeLists.txt
src/spec/upstream/helloworld/: CMakeLists.txt  hello.c  world.c
src/spec/upstream/helloworld/cmake/: HelloWorldConfig.cmake.in
src/spec/upstream/helloworld/include/: hello.h  world.h
src/spec/upstream/helloworld/pkgconfig/: hello.pc  world.pc
src/spec/upstream/helloworld/pkgconfig/msvc/: hello.pc  world.pc
src/spec/upstream/one/: CMakeLists.txt  one.c
src/spec/upstream/one/cmake/: one-config.cmake.in
src/spec/upstream/one/include/: one.h
src/spec/upstream/one/pkgconfig/: libone.pc
src/spec/upstream/one/pkgconfig/msvc/: libone.pc
src/spec/upstream/two/: CMakeLists.txt  two.c
src/spec/upstream/two/cmake/: Two2Config.cmake.in
src/spec/upstream/two/include/: two.h
src/spec/upstream/two/pkgconfig/: two.pc
src/spec/upstream/two/pkgconfig/msvc/: two.pc
src/spec/upstream/zero/: CMakeLists.txt
src/spec/upstream/zero/cmake/: zero-config.cmake
src/spec/upstream/zero/pkgconfig/: zero.pc
vim/templates/: skeleton.ts
